[gd_scene load_steps=15 format=2]

[ext_resource path="res://source/scenes/editor/gui/grammar/AlphabetTextBox.gd" type="Script" id=1]
[ext_resource path="res://source/scenes/editor/gui/shapes/ShapeNode.gd" type="Script" id=2]
[ext_resource path="res://source/scenes/editor/gui/grammar/grammar_container.gd" type="Script" id=3]
[ext_resource path="res://source/scenes/editor/gui/grammar/AxiomLineEdit.gd" type="Script" id=4]
[ext_resource path="res://source/scenes/editor/gui/shapes/ShapeSourceButton.gd" type="Script" id=5]
[ext_resource path="res://source/scenes/editor/gui/turtle/AbilitiesContainer.gd" type="Script" id=6]
[ext_resource path="res://source/scenes/editor/gui/turtle/SettingsContainer.gd" type="Script" id=7]
[ext_resource path="res://source/scenes/simulation/gui/godot_theme.tres" type="Theme" id=8]
[ext_resource path="res://source/scenes/editor/gui/EditorContainer.gd" type="Script" id=9]
[ext_resource path="res://source/scenes/editor/gui/shapes/CircleRect.gd" type="Script" id=10]
[ext_resource path="res://source/scenes/editor/gui/shapes/DeleteShapeButton.gd" type="Script" id=11]
[ext_resource path="res://source/scenes/editor/gui/shapes/ShapeConfigurationList.gd" type="Script" id=12]

[sub_resource type="ButtonGroup" id=1]
resource_name = "StartAngleRadio"

[sub_resource type="ButtonGroup" id=2]
resource_name = "TurnAngleRadio"

[node name="GrammarEditor" type="Node2D"]

[node name="GUI" type="Control" parent="."]
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="GUI"]
margin_right = 1280.0
margin_bottom = 720.0
tab_align = 0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grammar" type="GridContainer" parent="GUI/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="PropertiesContainer" type="GridContainer" parent="GUI/TabContainer/Grammar"]
margin_right = 1270.0
margin_bottom = 48.0
columns = 2

[node name="AlphabetLabel" type="Label" parent="GUI/TabContainer/Grammar/PropertiesContainer"]
margin_right = 69.0
margin_bottom = 22.0
text = "Alphabet:"

[node name="AlphabetTextBox" type="LineEdit" parent="GUI/TabContainer/Grammar/PropertiesContainer"]
margin_left = 73.0
margin_right = 133.0
margin_bottom = 22.0
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
editable = false
expand_to_text_length = true
script = ExtResource( 1 )

[node name="AxiomLabel" type="Label" parent="GUI/TabContainer/Grammar/PropertiesContainer"]
margin_top = 26.0
margin_right = 69.0
margin_bottom = 48.0
text = "Axiom:"

[node name="AxiomLineEdit" type="LineEdit" parent="GUI/TabContainer/Grammar/PropertiesContainer"]
margin_left = 73.0
margin_top = 26.0
margin_right = 133.0
margin_bottom = 48.0
expand_to_text_length = true
script = ExtResource( 4 )

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/TabContainer/Grammar"]
margin_top = 52.0
margin_right = 1270.0
margin_bottom = 686.0
rect_min_size = Vector2( 500, 264 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProductionContainer" type="GridContainer" parent="GUI/TabContainer/Grammar/ScrollContainer"]
margin_right = 355.0
margin_bottom = 22.0
columns = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_context_label" type="Label" parent="GUI/TabContainer/Grammar/ScrollContainer/ProductionContainer"]
margin_right = 84.0
margin_bottom = 22.0
text = "Left context"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="predecessor_label" type="Label" parent="GUI/TabContainer/Grammar/ScrollContainer/ProductionContainer"]
margin_left = 88.0
margin_right = 175.0
margin_bottom = 22.0
text = "Predecessor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="successor_label" type="Label" parent="GUI/TabContainer/Grammar/ScrollContainer/ProductionContainer"]
margin_left = 179.0
margin_right = 251.0
margin_bottom = 22.0
text = "Successor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="probability_label" type="Label" parent="GUI/TabContainer/Grammar/ScrollContainer/ProductionContainer"]
margin_left = 255.0
margin_right = 331.0
margin_bottom = 22.0
text = "Probability"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="add_production_button" type="Button" parent="GUI/TabContainer/Grammar/ScrollContainer/ProductionContainer"]
margin_left = 335.0
margin_right = 355.0
margin_bottom = 22.0
text = "+"

[node name="Turtle" type="Control" parent="GUI/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="GridContainer" type="GridContainer" parent="GUI/TabContainer/Turtle"]
margin_top = 60.0
margin_right = 620.0
margin_bottom = 321.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/TabContainer/Turtle/GridContainer"]
margin_right = 308.0
margin_bottom = 261.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="AbiltiesContainer" type="VBoxContainer" parent="GUI/TabContainer/Turtle/GridContainer/ScrollContainer"]
margin_right = 308.0
margin_bottom = 4.0
size_flags_horizontal = 3
script = ExtResource( 6 )

[node name="UserAbilitiesContainer" type="GridContainer" parent="GUI/TabContainer/Turtle/GridContainer/ScrollContainer/AbiltiesContainer"]
margin_right = 308.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlAbilitiesContainer" type="GridContainer" parent="GUI/TabContainer/Turtle/GridContainer/ScrollContainer/AbiltiesContainer"]
margin_top = 4.0
margin_right = 308.0
margin_bottom = 4.0
columns = 2

[node name="SettingsContainer" type="GridContainer" parent="GUI/TabContainer/Turtle/GridContainer"]
margin_left = 312.0
margin_right = 620.0
margin_bottom = 261.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
columns = 2
script = ExtResource( 7 )

[node name="StartAngleLabel" type="Label" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer"]
margin_top = 1.0
margin_right = 85.0
margin_bottom = 23.0
text = "Start angle"

[node name="StartAngleContainer" type="GridContainer" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer"]
margin_left = 89.0
margin_right = 288.0
margin_bottom = 24.0
columns = 5

[node name="StartAngleValue" type="SpinBox" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer/StartAngleContainer"]
margin_right = 76.0
margin_bottom = 24.0
min_value = -6.283
max_value = 6.283
step = 0.001
align = 2

[node name="Label2" type="Label" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer/StartAngleContainer"]
margin_left = 80.0
margin_top = 1.0
margin_right = 108.0
margin_bottom = 23.0
text = "rad"

[node name="CheckBox" type="CheckBox" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer/StartAngleContainer"]
margin_left = 112.0
margin_right = 136.0
margin_bottom = 24.0
pressed = true
group = SubResource( 1 )

[node name="Label" type="Label" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer/StartAngleContainer"]
margin_left = 140.0
margin_top = 1.0
margin_right = 171.0
margin_bottom = 23.0
text = "deg"

[node name="CheckBox2" type="CheckBox" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer/StartAngleContainer"]
margin_left = 175.0
margin_right = 199.0
margin_bottom = 24.0
disabled = true
group = SubResource( 1 )

[node name="TurnAngleLabel" type="Label" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer"]
margin_top = 29.0
margin_right = 85.0
margin_bottom = 51.0
text = "Turn angle"

[node name="TurnAngleContainer" type="GridContainer" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer"]
margin_left = 89.0
margin_top = 28.0
margin_right = 288.0
margin_bottom = 52.0
columns = 5

[node name="TurnAngleValue" type="SpinBox" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer/TurnAngleContainer"]
margin_right = 76.0
margin_bottom = 24.0
min_value = -6.283
max_value = 6.283
step = 0.001
align = 2

[node name="Label2" type="Label" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer/TurnAngleContainer"]
margin_left = 80.0
margin_top = 1.0
margin_right = 108.0
margin_bottom = 23.0
text = "rad"

[node name="CheckBox" type="CheckBox" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer/TurnAngleContainer"]
margin_left = 112.0
margin_right = 136.0
margin_bottom = 24.0
pressed = true
group = SubResource( 2 )

[node name="Label" type="Label" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer/TurnAngleContainer"]
margin_left = 140.0
margin_top = 1.0
margin_right = 171.0
margin_bottom = 23.0
text = "deg"

[node name="CheckBox3" type="CheckBox" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer/TurnAngleContainer"]
margin_left = 175.0
margin_right = 199.0
margin_bottom = 24.0
disabled = true
group = SubResource( 2 )

[node name="LineLengthLabel" type="Label" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer"]
margin_top = 56.0
margin_right = 85.0
margin_bottom = 78.0
text = "Line length"

[node name="LineLengthValue" type="SpinBox" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer"]
margin_left = 89.0
margin_top = 56.0
margin_right = 288.0
margin_bottom = 78.0
align = 2

[node name="WidthFalloffLabel" type="Label" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer"]
margin_top = 82.0
margin_right = 85.0
margin_bottom = 104.0
text = "Width falloff"

[node name="WidthFalloffValue" type="SpinBox" parent="GUI/TabContainer/Turtle/GridContainer/SettingsContainer"]
margin_left = 89.0
margin_top = 82.0
margin_right = 288.0
margin_bottom = 104.0
step = 0.001
align = 2

[node name="Shapes" type="HSplitContainer" parent="GUI/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="VSplitContainer" type="VSplitContainer" parent="GUI/TabContainer/Shapes"]
margin_right = 99.0
margin_bottom = 686.0
split_offset = 400

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/TabContainer/Shapes/VSplitContainer"]
margin_right = 99.0
margin_bottom = 460.0
rect_min_size = Vector2( 50, 60 )

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/TabContainer/Shapes/VSplitContainer/VBoxContainer"]
margin_right = 99.0
margin_bottom = 22.0

[node name="NewConfiguationButton" type="Button" parent="GUI/TabContainer/Shapes/VSplitContainer/VBoxContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 22.0
text = "New"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteConfigurationButton" type="Button" parent="GUI/TabContainer/Shapes/VSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 99.0
margin_bottom = 22.0
disabled = true
text = "Delete"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/TabContainer/Shapes/VSplitContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 99.0
margin_bottom = 460.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ShapeConfigurationList" type="ItemList" parent="GUI/TabContainer/Shapes/VSplitContainer/VBoxContainer/ScrollContainer"]
margin_right = 99.0
margin_bottom = 434.0
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true
script = ExtResource( 12 )

[node name="ShapeSourceContainer" type="VBoxContainer" parent="GUI/TabContainer/Shapes/VSplitContainer"]
margin_top = 468.0
margin_right = 99.0
margin_bottom = 686.0

[node name="ShapeSourceButton" type="OptionButton" parent="GUI/TabContainer/Shapes/VSplitContainer/ShapeSourceContainer"]
margin_right = 99.0
margin_bottom = 22.0
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="GUI/TabContainer/Shapes"]
margin_left = 107.0
margin_right = 1270.0
margin_bottom = 686.0
color = Color( 0.588235, 0.588235, 0.588235, 1 )

[node name="ShapeNode" type="Node2D" parent="GUI/TabContainer/Shapes/ColorRect"]
position = Vector2( 581, 343 )
z_index = 7
script = ExtResource( 2 )

[node name="CircleRect" type="ColorRect" parent="GUI/TabContainer/Shapes/ColorRect"]
margin_right = 100.0
margin_bottom = 100.0
color = Color( 1, 1, 1, 0 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsContainer" type="GridContainer" parent="GUI"]
anchor_right = 1.0
margin_left = 1200.0
margin_top = 50.0
margin_right = 1246.0
margin_bottom = 80.0
grow_horizontal = 0
rect_pivot_offset = Vector2( 1, 0 )
custom_constants/hseparation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="GUI/ButtonsContainer"]
margin_right = 46.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="GUI/TabContainer/Grammar/PropertiesContainer/AxiomLineEdit" to="GUI/TabContainer/Grammar/ScrollContainer/ProductionContainer" method="_on_Axiom_text_changed"]
[connection signal="alphabet_changed" from="GUI/TabContainer/Grammar/ScrollContainer/ProductionContainer" to="GUI/TabContainer/Turtle/GridContainer/ScrollContainer/AbiltiesContainer" method="_on_alphabet_changed"]
[connection signal="alphabet_changed" from="GUI/TabContainer/Grammar/ScrollContainer/ProductionContainer" to="GUI/TabContainer/Grammar/PropertiesContainer/AlphabetTextBox" method="_on_alphabet_changed"]
[connection signal="axiom_changed" from="GUI/TabContainer/Grammar/ScrollContainer/ProductionContainer" to="GUI/TabContainer/Grammar/PropertiesContainer/AxiomLineEdit" method="_on_axiom_changed"]
[connection signal="button_up" from="GUI/TabContainer/Grammar/ScrollContainer/ProductionContainer/add_production_button" to="GUI/TabContainer/Grammar/ScrollContainer/ProductionContainer" method="_on_add_production_button_button_up"]
[connection signal="button_up" from="GUI/TabContainer/Shapes/VSplitContainer/VBoxContainer/HBoxContainer/NewConfiguationButton" to="GUI/TabContainer/Shapes/VSplitContainer/VBoxContainer/ScrollContainer/ShapeConfigurationList" method="_on_add_new_configuration"]
[connection signal="button_up" from="GUI/TabContainer/Shapes/VSplitContainer/VBoxContainer/HBoxContainer/DeleteConfigurationButton" to="GUI/TabContainer/Shapes/VSplitContainer/VBoxContainer/ScrollContainer/ShapeConfigurationList" method="_on_delete_configuration"]
[connection signal="item_selected" from="GUI/TabContainer/Shapes/VSplitContainer/VBoxContainer/ScrollContainer/ShapeConfigurationList" to="GUI/TabContainer/Shapes/VSplitContainer/VBoxContainer/HBoxContainer/DeleteConfigurationButton" method="_on_configuration_selected"]
[connection signal="item_selected" from="GUI/TabContainer/Shapes/VSplitContainer/VBoxContainer/ScrollContainer/ShapeConfigurationList" to="GUI/TabContainer/Shapes/VSplitContainer/VBoxContainer/ScrollContainer/ShapeConfigurationList" method="_on_ShapeConfigurationList_item_selected"]
[connection signal="circle_selected" from="GUI/TabContainer/Shapes/VSplitContainer/ShapeSourceContainer/ShapeSourceButton" to="GUI/TabContainer/Shapes/ColorRect/ShapeNode" method="_on_ShapeSourceButton_circle_selected"]
[connection signal="item_selected" from="GUI/TabContainer/Shapes/VSplitContainer/ShapeSourceContainer/ShapeSourceButton" to="GUI/TabContainer/Shapes/VSplitContainer/ShapeSourceContainer/ShapeSourceButton" method="_on_ShapeSourceButton_item_selected"]
[connection signal="rectangle_selected" from="GUI/TabContainer/Shapes/VSplitContainer/ShapeSourceContainer/ShapeSourceButton" to="GUI/TabContainer/Shapes/ColorRect/ShapeNode" method="_on_ShapeSourceButton_rectangle_selected"]
[connection signal="triangle_selected" from="GUI/TabContainer/Shapes/VSplitContainer/ShapeSourceContainer/ShapeSourceButton" to="GUI/TabContainer/Shapes/ColorRect/ShapeNode" method="_on_ShapeSourceButton_triangle_selected"]
[connection signal="gui_input" from="GUI/TabContainer/Shapes/ColorRect/CircleRect" to="GUI/TabContainer/Shapes/ColorRect/CircleRect" method="_on_self_gui_input"]
[connection signal="button_up" from="GUI/ButtonsContainer/BackButton" to="GUI/TabContainer/Grammar/ScrollContainer/ProductionContainer" method="_on_SaveButton_button_up"]
[connection signal="button_up" from="GUI/ButtonsContainer/BackButton" to="GUI/TabContainer/Turtle/GridContainer/ScrollContainer/AbiltiesContainer" method="_on_BackButton_button_up"]
[connection signal="button_up" from="GUI/ButtonsContainer/BackButton" to="GUI/TabContainer/Turtle/GridContainer/SettingsContainer" method="_on_BackButton_button_up"]
[connection signal="button_up" from="GUI/ButtonsContainer/BackButton" to="GUI/TabContainer" method="_on_BackButton_button_up"]
